optmized docker image, to use modules, BigDecimal to BigInteger